Skip to content

playlist saves to xspf even if m3u/html selected

1.0.1 from the ppa. Using 64-bit Ubuntu 9.04.

100% reproducible

  1. load one or more tracks.
  2. Go to Media>save playlist to file
  3. Change "XSPF playlist" to "M3U playlist" or "HTML playlist"
  4. Give any name you like, but do not give an extension.
  5. Save it

For me, the above procedure results in a .xspf file. What is interesting is if I do give an m3u extension, then it correctly saves as an m3u.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information